# Fjpeg

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/jpegutil/fjpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/org/jpegutil/fjpeg/: ImageUtils.java  MainActivity.java  NativeCompress.java
app/src/main/java/org/jpegutil/fjpeg/enumerate/: JpegConst.java
app/src/main/java/org/jpegutil/fjpeg/minterface/: NativeCallBack.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/jpegutil/fjpeg/: ExampleUnitTest.java
example/: build.gradle
example/src/androidTest/java/org/jpegutil/example/: ExampleInstrumentedTest.java
example/src/main/: AndroidManifest.xml
example/src/main/java/org/jpegutil/example/: MainActivity.java
example/src/main/res/layout/: activity_main.xml
example/src/test/java/org/jpegutil/example/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libjpeg/: CMakeLists.txt  build.gradle
libjpeg/src/androidTest/java/org/jpegutil/fjpeg/: ExampleInstrumentedTest.java
libjpeg/src/main/: AndroidManifest.xml
libjpeg/src/main/cpp/include/: mconst.h
libjpeg/src/main/java/org/jpegutil/fjpeg/: NativeCompress.java
libjpeg/src/main/java/org/jpegutil/fjpeg/minterface/: NativeCallBack.java
